# anhc_agent_ros2

./: README.md
.devcontainer/: Dockerfile
.understand-anything/: .understandignore
.understand-anything/tmp/: assemble-scan.js  generate-input.js  ua-import-map-input.json  ua-import-map-output.json  ua-scan-files.json
docs/: train_analysis.md
src/anhc_agent/: CMakeLists.txt  GUIDE_TD3.md  anhcape_architecture.py  anhcape_architecture_viz.ipynb  evaluation_notebook.ipynb  package.xml  process_batch.py
src/anhc_agent/.understand-anything/: knowledge-graph.json  meta.json
src/anhc_agent/config/: environment.yaml  hyperparameters.yaml  td3_hyperparameters.yaml  test_config.yaml  train_config.yaml  train_td3_config.yaml
src/anhc_agent/launch/: test_anhcape.launch.py  train_td3.launch.py
src/anhc_agent/scripts/environment/: environment.py  environment_interface.py
src/anhc_agent/scripts/policy/: anhcape_agent.py  td3_agent.py  test_anhcape_agent.py  train_anhcape_agent.py  train_td3_agent.py
src/anhc_agent/scripts/utils/: buffer.py  plot_metrics.py  plot_reward.py  plot_trajectories_on_map.py  td3_uniform_buffer.py
src/anhc_agent_description/: CMakeLists.txt  package.xml
src/anhc_agent_description/launch/: agent_description.launch.py
src/anhc_agent_description/urdf/p3dx/: pioneer3dx.urdf.xacro
src/anhc_agent_gazebo/: CMakeLists.txt  package.xml
src/anhc_agent_gazebo/config/: pedsim_training_env.xml
src/anhc_agent_gazebo/launch/: gazebo_world.launch.py  rviz.launch.py  simulation.launch.py  slam.launch.py  training_env.launch.py  training_env_dynamic.launch.py
src/anhc_agent_gazebo/models/training_env/: model.config  model.sdf  training_env.mtl
src/anhc_agent_gazebo/scripts/: pedsim_gz_bridge.py
src/anhc_agent_gazebo/worlds/: training_env.world
src/anhc_agent_interfaces/: CMakeLists.txt  package.xml
src/pedsim_ros2/src/pedsim_ros2/pedsim_gazebo_plugin/scripts/: spawn_pedsim_agents.py
