<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>anhc_agent</name>
  <version>0.0.0</version>
  <description>ANHCAPE: An Huynh Custom Adaptive Policy with Embedding — DRL navigation agent</description>
  <maintainer email="anhuynh@example.com">An Huynh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclpy</depend>
  <depend>anhc_agent_gazebo</depend>
  <depend>anhc_agent_interfaces</depend>

  <depend>python3-tensorboard-pip</depend>
  <depend>python3-squaternion-pip</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
