<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>anhc_agent_gazebo</name>
  <version>0.0.0</version>
  <description>A Gazebo simulation package for the DRL agent</description>
  <maintainer email="anhuynh@example.com">An Huynh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ros_gz_sim</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>anhc_agent_description</depend>
  <depend>anhc_agent_interfaces</depend>

  <!-- pedsim_ros2: pedestrian simulation -->
  <depend>pedsim_msgs</depend>
  <depend>pedsim_simulator</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
